# obsidian2anki

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
md2anki/: anki.py  data.py  main.py
notebooks/: explore.ipynb
tests/: test_files.py
