[tool.poetry]
name = "obsidiantags"
version = "0.1.0"
description = ""
authors = ["Oleksandr Podze <dasdeg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
ankipandas = "^0.3.14"

# for blackd connector
genanki = "^0.13.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
aiohttp = "^3.8.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

