[tool.poetry]
name = "obsidian2anki"
version = "0.1.0"
description = ""
authors = ["Oleksandr Podze <dasdeg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
ankipandas = "^0.3.14"
genanki = "^0.13.0"
pytest = "^7.3.1"
jupyterlab = "^4.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
# for blackd connector
jupyterlab = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

